# mcp-shlink

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  droid-review.yml  droid.yml  publish.yml
src/mcp_shlink/: client.py  models.py  server.py  tools.py
src/mcp_shlink.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_client.py  test_tools.py
